# allpremarkets

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  setup_vps.sh
deploy/logrotate/: premarket-bot
deploy/systemd/: premarket-admin.service  premarket-bot.service
src/admin/: __init__.py  web.py
src/alerts/: __init__.py  telegram.py
src/app/: __init__.py  runtime.py
src/common/: __init__.py  bus.py  config.py  logging.py  models.py
src/ingest/: __init__.py  base.py  binance.py  bybit.py  demo.py  hyperliquid.py  mexc.py  whales.py
src/rules/: __init__.py  hedged.py  spread.py
tests/: test_admin_panel.py  test_event_bus.py  test_hedged_engine.py  test_ingest_handlers.py  test_spread_engine.py  test_telegram_alerts.py
