[project]
name = "crypto-premarket-alert-bot"
version = "0.1.0"
description = "Async Telegram bot for crypto premarket alerts"
readme = "README.md"
authors = [{ name = "Premarket Bot" }]
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
  "websockets>=12.0",
  "python-telegram-bot>=21.4",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "loguru>=0.7",
]

[project.optional-dependencies]
playwright = ["playwright>=1.43"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
# Placeholder entry point. Will be updated in later phases.
alert-bot = "common.logging:setup_logging"
